// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GoogleTagManager doesn't add anything if there's no container ids 1`] = `""`;

exports[`GoogleTagManager doesn't add anything if there's no container ids 2`] = `null`;

exports[`GoogleTagManager works with a single container id 1`] = `
"<script data-rh=\\"true\\" async=\\"true\\" src=\\"https://www.googletagmanager.com/gtm.js?id=GTM-XXXXXXX\\"></script><script data-rh=\\"true\\" >
        var dataLayer = window.dataLayer || [];
        dataLayer.push({
          \\"gtm.start\\": new Date().getTime(),
          event: \\"gtm.js\\",
        })
        </script>"
`;

exports[`GoogleTagManager works with a single container id 2`] = `
<noscript>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": ".css-llz5b9-GtmCode{display:none;visibility:hidden;}",
      }
    }
    data-emotion="css llz5b9-GtmCode"
  />
  <iframe
    className="css-llz5b9-GtmCode"
    height="0"
    src="https://www.googletagmanager.com/ns.html?id=GTM-XXXXXXX"
    title="GTM-XXXXXXX"
    width="0"
  />
</noscript>
`;

exports[`GoogleTagManager works with multiple container ids 1`] = `
"<script data-rh=\\"true\\" async=\\"true\\" src=\\"https://www.googletagmanager.com/gtm.js?id=GTM-XXXXXXX\\"></script><script data-rh=\\"true\\" async=\\"true\\" src=\\"https://www.googletagmanager.com/gtm.js?id=GTM-YYYYYYY\\"></script><script data-rh=\\"true\\" >
        var dataLayer = window.dataLayer || [];
        dataLayer.push({
          \\"gtm.start\\": new Date().getTime(),
          event: \\"gtm.js\\",
        })
        </script>"
`;

exports[`GoogleTagManager works with multiple container ids 2`] = `
Array [
  <noscript>
    <style
      dangerouslySetInnerHTML={
        Object {
          "__html": ".css-llz5b9-GtmCode{display:none;visibility:hidden;}",
        }
      }
      data-emotion="css llz5b9-GtmCode"
    />
    <iframe
      className="css-llz5b9-GtmCode"
      height="0"
      src="https://www.googletagmanager.com/ns.html?id=GTM-XXXXXXX"
      title="GTM-XXXXXXX"
      width="0"
    />
  </noscript>,
  <noscript>
    <style
      dangerouslySetInnerHTML={
        Object {
          "__html": ".css-llz5b9-GtmCode{display:none;visibility:hidden;}",
        }
      }
      data-emotion="css llz5b9-GtmCode"
    />
    <iframe
      className="css-llz5b9-GtmCode"
      height="0"
      src="https://www.googletagmanager.com/ns.html?id=GTM-YYYYYYY"
      title="GTM-YYYYYYY"
      width="0"
    />
  </noscript>,
]
`;
